FEAT:Added Table and Lists

--- a/index.html
+++ b/index.html
@@ -11,5 +11,72 @@
     <img src="./Assets/Letaru  Linda Masia.jpeg" alt="Linda's professional picture" width="300" height="300">
 <h2>Contact details.</h2>
 <p>You can contact me <a href="https://www.linkedin.com/in/letaru-linda-masia-7b48a9175/" target="_blank">here</a></p>
+<!-- UNORDERED LIST -->
+<h3>My Skills</h3>
+<ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>Javascript</li>
+    <li>Python</li>
+    <li>Django</li>
+    <li>SQL</li>
+    <li>React</li>
+    <li>MongoDB</li>
+    <li>Git&Github</li>
+    <li>Node JS</li>
+</ul>
+<!-- ORDERED LIST -->
+ <h3>TODOs</h3>
+ <ol>
+    <li>😇Wake up</li>
+    <li>👩‍💻Code</li>
+    <li>😴Sleep</li>
+    <li>🍉Eat</li>
+ </ol>
+ <!-- UPPERCASE ROMAN NUMBER -->
+  <h3>Hobbies</h3>
+  <ol type="I">
+    <li>Singing</li>
+    <li>Swimming</li>
+    <li>Learning new skills</li>
+  </ol>
+  <!-- TABLES  tr(row),th(header),td(data cells)-->
+   <table border="1">
+    <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Age</th>
+        <th>Country</th>
+    </tr>
+    <tr>
+        <td>01</td>
+        <td>Robert</td>
+        <td>25</td>
+        <td>Uganda</td>
+    </tr>
+    <tr>
+        <td>02</td>
+        <td>Marvin</td>
+        <td>26</td>
+        <td>Kenya</td>
+    </tr>
+    <tr>
+        <td>03</td>
+        <td>Robison</td>
+        <td>27</td>
+        <td>Tanzania</td>
+    </tr>
+    <tr>
+        <td>04</td>
+        <td>Heavens</td>
+        <td>27</td>
+        <td>Burundi</td>
+    </tr>
+   </table>
+   <!-- INTRODUCTION TO HTML FORM -->
+    <P>This is an example of a basic HTML Form.</P>
+    <form action="">
+        
+    </form>
 </body>
 </html>
