--- a/index.html
+++ b/index.html
@@ -76,7 +76,12 @@
    <!-- INTRODUCTION TO HTML FORM -->
     <P>This is an example of a basic HTML Form.</P>
     <form action="">
-        
+        <label for="">Name:</label> 
+        <input type="text" placeholder="Enter your name here!"> <br><br>
+        <label for="">Email:</label>
+        <input type="Email" placeholder="Enter your email "> <br><br>
+        <button type="button">Submit</button>
+
     </form>
 </body>
 </html>
