FEAT:Added radio button to the form

--- a/index.html
+++ b/index.html
@@ -81,7 +81,30 @@
         <label for="">Email:</label>
         <input type="Email" placeholder="Enter your email "> <br><br>
         <button type="button">Submit</button>
-
     </form>
+    <!-- ASIMPLE REGISTRATION FORM. -->
+     <P>This is a simple example of registration form.</P>
+     <form action="">
+        <!-- Text input -->
+        <label for="fullname">Full Name*:</label>
+        <input type="text" id="fullname" name="fullname" placeholder="Enter your name here!" required><br><br>
+        <!-- Email input -->
+        <label for="email">Email*:</label>
+        <input type="Email" id="email" name="email" placeholder="Enter your email" required> <br><br>
+        <!-- password input -->
+        <label for="">Password*:</label>
+        <input type="password" id="password" name="password" placeholder="Enter your password" required> <br><br>
+        <!-- radio button -->
+       <strong>
+           <p>Gender:</p>
+       </strong>  
+       <input type="radio" value="male" id="male" name="gender">
+       <label for="male">Male</label>
+       <input type="radio" id="female" name="gender">
+       <label for="female">Female</label><br><br>
+        <label for="">Select your Skills:</label>
+        <label for="">Country:</label>
+        <button>Register</button>
+     </form>
 </body>
 </html>
