FEAT:Added the checkbox to the form

--- a/index.html
+++ b/index.html
@@ -102,7 +102,14 @@
        <label for="male">Male</label>
        <input type="radio" id="female" name="gender">
        <label for="female">Female</label><br><br>
-        <label for="">Select your Skills:</label>
+       <!-- checkbox -->
+        <strong><p>Select your Skills</p></strong>
+        <label for="">HTML</label>
+        <input type="checkbox">
+        <label for="">CSS</label>
+        <input type="checkbox">
+        <label for="">Javascript</label>
+        <input type="checkbox"> <br><br>
         <label for="">Country:</label>
         <button>Register</button>
      </form>
